--- a/shop.html
+++ b/shop.html
@@ -75,11 +75,11 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link active" href="">Shop</a>
+                        <a class="nav-link active" href="#">Shop</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                     </li>
 
                     <li class="nav-item">
